increased nav opacity and fixed overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,10 @@ body {
   background: rgb(var(--background-start-rgb));
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
